--- a/wp-content/themes/waves/sass/_layouts/_menu.scss
+++ b/wp-content/themes/waves/sass/_layouts/_menu.scss
@@ -7,6 +7,7 @@
 
 .waves-section.menu-tabs{
 	margin-bottom: -150px;
+	min-height: 800px;
 	margin-top: -150px;
 }
 
